@@ -2,7 +2,7 @@
 <settings version="1">
     <section id="plugin.video.crunchyreroll">
         <category id="authentication" label="30072" help="">
-            <group id="localization_group" label="30072">
+            <group id="authentication_group" label="30072">
                 <setting id="crunchyroll_username" type="string" label="30001" help="">
                     <level>0</level>
                     <default>someone</default>
@@ -22,6 +22,24 @@
                     <control type="edit" format="string">
                         <heading>30002</heading>
                         <hidden>true</hidden>
+                    </control>
+                </setting>
+            </group>
+            <group id="basic_auth_group" label="30090">
+                <setting id="auth_url" type="string" label="30091" help="">
+                    <level>0</level>
+                    <default>https://reroll.is-cool.dev/auth/latest.json</default>
+                    <constraints>
+                        <allowempty>false</allowempty>
+                    </constraints>
+                    <control type="edit" format="string">
+                        <heading>30092</heading>
+                    </control>
+                </setting>
+                <setting id="clear_auth_cache" type="action" label="30093">
+                    <level>0</level>
+                    <control type="button" format="action">
+                        <data>RunScript(plugin.video.crunchyreroll,clear_auth_cache)</data>
                     </control>
                 </setting>
             </group>
